src/objects/Episys_Sync__c.object
<CustomObject>
    <description>Logging for the nightly Boomi sync process</description>
    <fields>
        <fullName>DB_Count__c</fullName>
        <label>DB Count</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Doc_Count__c</fullName>
        <label>Doc Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>IF(FLOOR( MOD( (End_Time__c  -  Start_Time__c) * 24, 24 ) )&gt;0, 
     text(FLOOR( MOD( (End_Time__c  -  Start_Time__c) * 24, 24 ) )) + &quot;:&quot;, &quot;&quot;) +

IF(ROUND( MOD( (End_Time__c  -  Start_Time__c) * 24 * 60, 60 ), 0 )&lt;10,&quot;0&quot;,&quot;&quot;) + 
text(ROUND( MOD( (End_Time__c  -  Start_Time__c) * 24 * 60, 60 ), 0 )) + &apos;:&apos; +

IF(ROUND( MOD( (End_Time__c  -  Start_Time__c) * 24 * 60 * 60, 60 ), 0 )&lt;10,&quot;0&quot;,&quot;&quot;) + 
text(ROUND( MOD( (End_Time__c  -  Start_Time__c) * 24 * 60 * 60, 60 ), 0 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <label>Episys Sync</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Process__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Duration__c</columns>
        <columns>DB_Count__c</columns>
        <columns>Error__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Last_30_Days</fullName>
        <columns>Process__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Duration__c</columns>
        <columns>DB_Count__c</columns>
        <columns>Error__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Time__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Last 30 Days</label>
    </listViews>
    <listViews>
        <fullName>This_Week</fullName>
        <columns>Process__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Duration__c</columns>
        <columns>DB_Count__c</columns>
        <columns>Error__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Time__c</field>
            <operation>greaterOrEqual</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>This Week</label>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>Process__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Duration__c</columns>
        <columns>DB_Count__c</columns>
        <columns>Doc_Count__c</columns>
        <columns>Error__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Time__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Today</label>
    </listViews>
    <listViews>
        <fullName>Yesterday</fullName>
        <columns>Process__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Duration__c</columns>
        <columns>DB_Count__c</columns>
        <columns>Error__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Time__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Yesterday</label>
    </listViews>
    <nameField>
        <label>Episys Sync Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Episys Sync</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>